# Enitity-extraction-NER

./: nertry.py  pyproject.toml
